syntax = "proto3";
package dadtkv;

option csharp_namespace = "DADTKV";

import "LeaseService.proto";

message ConsensusValueDto {
  repeated dadtkv.LeaseRequestDto leaseRequests = 1;
}