syntax = "proto3";
package dadtkv;

option csharp_namespace = "DADTKV";

service LeaseService {
  rpc RequestLease(LeaseRequest) returns (LeaseResponse);
  rpc FreeLease(LeaseRequest) returns (LeaseResponse);
}

message LeaseRequest {
  string clientID = 1;
  repeated string set = 2;
}

message LeaseResponse {
  bool ok = 1;
}
